@@ -17,7 +17,7 @@ menu.item.scmSubmit=Submit...
 menu.item.scmSync=Sync
 
 menu.title.debugger=Debugger
-menu.item.debug=Debug
+menu.item.debug=Debug...
 menu.item.debugRemote=Debug Remote...
 menu.item.showInputTokens=Show Input Tokens
 menu.item.hideInputTokens=Hide Input Tokens
