@@ -6,13 +6,13 @@ UpdateOSXXMLURL=http://www.antlr.org/works/update_osx.xml
 FeedbackURL=http://www.antlr.org/misc/feedback
 DocumentationURL=http://www.antlr.org/works/doc/antlrworks.pdf
 
-AppVersionShort=1.0b6
-AppVersionLong=1.0b6
+AppVersionShort=1.0b7
+AppVersionLong=1.0b7
 AppName = ANTLRWorks
-AppBuildDate=11/18/2006
+AppBuildDate=11/23/2006
 
 SplashInfo = Edit, visualize and debug ANTLR grammars
-SplashVersion = Version 1.0b6
+SplashVersion = Version 1.0b7
 SplashCopyright = (c) 2005-2006 Jean Bovet & Terence Parr
 
 DefaultFont = Monospaced
